--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,15 @@ before_install:
   - docker build -t xxhashanxx/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true xxhashanxx/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker"
+  env:  "Docker-env"
+  bucket_name:  "elasticbeanstalk-us-east-1-562571466923"
+  bucket_path:  "docker"
+  on:
+    branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
