--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
   app: "docker"
-  env:  "Docker-env"
+  env:  "Docker-env-1"
   bucket_name:  "elasticbeanstalk-us-east-1-562571466923"
   bucket_path:  "docker"
   on:
